--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "googleapis": "^170.1.0",
     "ngrok": "^5.0.0-beta.2",
     "node-schedule": "^2.1.1",
     "react-icons": "^5.5.0",
@@ -7,6 +10,7 @@
     "recharts": "^2.15.3"
   },
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "@types/react-icons": "^2.2.7"
   }
 }
